syntax = "proto2";

message UserApps {
  repeated uint32 apps = 1;
  optional double lat = 2;
  optional double lon = 3;
  optional string dev_type = 4;
  optional string dev_id = 5;
}